--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   go:
     name: Check sources
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     env:
       OPERATOR_SDK_VERSION: v1.14.0
       PR_CHECK: true
@@ -21,7 +21,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Cache Operator SDK ${{ env.OPERATOR_SDK_VERSION }}
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: cache-operator-sdk
         with:
           path: ~/cache
@@ -39,7 +39,7 @@ jobs:
           echo "$HOME/bin" >> $GITHUB_PATH
       - name: Cache go modules
         id: cache-mod
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
